--- a/index.html
+++ b/index.html
@@ -225,15 +225,23 @@
                                         <div class="step">
                                             <p class="mb-20 p_bg p_warning">Please, follow the steps below to install Medilac Theme (Make sure you had extract files).</p>
                                             <ul class="no-bullets">
-                                                <li><strong class="badge badge-primary">Step 1</strong>  Login to your WordPress Dasrdoard</li>
-                                                <li><strong class="badge badge-primary">Step 2</strong>  Navigate to Appearance ► Themes</li>
+                                                <li><strong class="badge badge-primary">Step 1</strong> Login to your WordPress Dasrdoard</li>
+                                                <li><strong class="badge badge-primary">Step 2</strong> Navigate to Appearance ► Themes</li>
                                                 <li>
-                                                    <strong class="badge badge-primary">Step 3</strong>  Click <strong>Add New</strong> button on top of the page.
+                                                    <strong class="badge badge-primary">Step 3</strong> Click <strong>Add New</strong> button on top of the page.
                                                     <img alt="Install via WordPress Dashboard | Medilac WooCommerce WordPress Theme" src="assets/img/install-theme.jpg" />
                                                 </li>
                                                 <li>
-                                                    <strong class="badge badge-primary">Step 4</strong>  Then click <strong>Upload Theme</strong>
+                                                    <strong class="badge badge-primary">Step 4</strong> Then click <strong>Upload Theme</strong>
                                                     <img alt="Install via WordPress Dashboard | Medilac WooCommerce WordPress Theme" src="assets/img/install-theme-u1.png" />
+                                                </li>
+                                                <li>
+                                                    <strong class="badge badge-primary">Step 5</strong> Next, <strong>Browse</strong> to the zip file and click <strong>Install Now</strong> for the theme to be uploaded and installed.
+                                                    <img alt="Install via WordPress Dashboard | Medilac WooCommerce WordPress Theme" src="assets/img/install-theme-u2.png" />
+                                                </li>
+                                                <li>
+                                                    <strong class="badge badge-primary">Step 6</strong> After done installing, click <strong>Activate</strong> the theme.
+                                                    <img alt="Install via WordPress Dashboard | Medilac WooCommerce WordPress Theme" src="assets/img/install-theme-u3.png" />
                                                 </li>
                                             </ul>
                                         </div>
